@@ -790,14 +790,16 @@ class CItemPrototype extends CItemGeneral {
 		// Master item deletion will remove dependent items on database level.
 		while ($db_dependent_items) {
 			$db_dependent_items = $this->get([
-				'output'		=> ['itemid', 'name'],
-				'filter'		=> ['type' => ITEM_TYPE_DEPENDENT, 'master_itemid' => array_keys($db_dependent_items)],
-				'selectHosts'	=> ['name'],
-				'preservekeys'	=> true
+				'output' => ['itemid', 'name'],
+				'filter' => ['type' => ITEM_TYPE_DEPENDENT, 'master_itemid' => array_keys($db_dependent_items)],
+				'selectHosts' => ['name'],
+				'preservekeys' => true
 			]);
 			$db_dependent_items = array_diff_key($db_dependent_items, $dependent_itemprototypes);
 			$dependent_itemprototypes += $db_dependent_items;
 		};
+		$dependent_itemprototypeids = array_keys($dependent_itemprototypes);
+		$childPrototypeids += array_combine($dependent_itemprototypeids, $dependent_itemprototypeids);
 
 		$options = [
 			'output' => API_OUTPUT_EXTEND,
@@ -884,6 +886,7 @@ class CItemPrototype extends CItemGeneral {
 			$host = reset($item['hosts']);
 			info(_s('Deleted: Item prototype "%1$s" on "%2$s".', $item['name'], $host['name']));
 		}
+		$prototypeids = array_map('strval', $prototypeids);
 
 		return ['prototypeids' => $prototypeids];
 	}
