@@ -3,6 +3,7 @@ Changes for 3.4.0rc2
 New features:
 
 Bug fixes:
+A.F....... [ZBXNEXT-3883] fixed dependent trigger with dependent item deletion; dependent item recursion message; dependent item massupdate form master item being reset on error (gcalenko)
 ..F....... [ZBX-12506] fixed wrong top position of the period selection box on the graphs after closing/opening filter (vmurzins)
 .......PS. [ZBX-12486] fixed item removal from poller queue during configuration cache synchronization (wiper)
 ..F....... [ZBXNEXT-3890] fixed extra graph loading (vmurzins)
